--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "kr.co.yjson.ass.androidsamples"
-        minSdkVersion 14
+        minSdkVersion 9
         targetSdkVersion 26
         versionCode 3
         versionName "1.3.3.1"
