안드로이드 스튜디오 업데이트, gradle 버전 업데이트 (7.대) 설정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="kr.co.yjson.ass.androidsamples">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -14,7 +13,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -28,7 +28,8 @@
 
         <activity
             android:name=".LinkActivity"
-            android:clearTaskOnLaunch="true">
+            android:clearTaskOnLaunch="true"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
@@ -44,7 +45,8 @@
 
 
         <receiver android:name=".TestReceiver"
-            android:enabled="true">
+            android:enabled="true"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.ACTION_USB_DEVICE_ATTACHED"/>
